# qdiv

./: .gitattributes  .gitignore  .readthedocs.yaml  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SUPPORT.md  __init__.py  example1_seqs.fa  example1_table_taxa.csv  example2_table_taxa.csv  example3_table_taxa.csv  example_meta.csv  example_seqs.fa  example_table.csv  paper.bib  paper.md  pyproject.toml  pytest.ini  qDiv_functions.py  qDiv_gui.py  qdiv_env_linux.yml  qdiv_env_win.yml  requirements.txt
.github/workflows/: ci.yml  draft-pdf.yml
docs/: Citations.rst  Diversity calculations.rst  GUI.rst  Information and statistics.rst  Input files.rst  Installation.rst  Load and print files.rst  Null models.rst  Plotting.rst  Subset and manipulate data.rst  conf.py  index.rst
docs/.ipynb_checkpoints/: Tutorial 1-checkpoint.ipynb
docs/source/: Citations.rst  Data_types.rst  Installation.rst  conf.py  (+21 more)
example_files/: Consensus_meta.csv  Consensus_seq.fa  Consensus_sintax.txt  Consensus_table.csv  Consensus_tree.txt  example1_table_taxa.csv  example2_seqs.fa  example2_table_taxa.csv  example3_seqs.fa  example3_table_taxa.csv  example_DADA2_seq.fa  example_DADA2_table.csv  example_Unoise_seq.fa  example_Unoise_table.csv  example_metadata.csv
qdiv/: __init__.py  citations.py  data_object.py  diversity.py  files.py  gui.py  hfunc.py  null.py  plot.py  simulate.py  stats.py  subset.py
tests/: conftest.py  test_diversity.py  test_null_models.py  test_null_models_placeholder.py  test_pcoa_dbrda.py  test_stats_light.py
(+140 files in other folders)
