[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qdiv"
version = "4.0.0"
description = "Microbial diversity analysis toolkit"
authors = [
    { name = "Oskar Modin", email = "omvatten@gmail.com" }
]

readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"

# Core dependencies for your package
dependencies = [
    "pandas>=1.3",
    "numpy>=1.21",
    "matplotlib>=3.5",
    "tqdm>=4.60"
]

# Optional dependencies
[project.optional-dependencies]
accelerate = ["numba>=0.57"]
docs = [
  "sphinx>=8",
  "sphinx-rtd-theme>=3",
  "myst-parser>=4",
  "nbsphinx>=0.9.5"
]



[tool.setuptools.packages.find]
where = ["."]
include = ["qdiv*"]
